New Feature: run energyplus file and retreive variety of reports

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,20 @@ data/
 energy-table\.xlsx
 
 main-test\.py
+
+# EnergyPlus
+*.audit
+*.bnd
+*.eio
+*.end
+*.err
+*.mdd
+*.mtd
+*.rdd
+*.shd
+*.sql
+*.csv
+*.htm
+*.dbg
+*.eso
+*.mtr
