Namechange: pyumi is now archetypal

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: pyumi
+name: archetypal
 channels:
   - https://conda.anaconda.org/conda-forge/noarch
   - https://conda.anaconda.org/conda-forge/osx-64
