--- a/.travis.yml
+++ b/.travis.yml
@@ -4,39 +4,16 @@ sudo: required
 
 matrix:
   include:
-  # Linux, not on master
-  - if: branch != master
+  # Linux, on develop
+  - if: branch = develop
     os: linux
-    env: PYTHON=2.7 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=bb7ca4f0da ENERGYPLUS_INSTALL_VERSION=9-0-1 NUMPY=True
-  - if: branch != master
-    os: linux
-    env: PYTHON=3.7 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=bb7ca4f0da ENERGYPLUS_INSTALL_VERSION=9-0-1 NUMPY=True
-  # Linux, on master
-  - if: branch = master
-    os: linux
-    env: PYTHON=2.7 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=bb7ca4f0da ENERGYPLUS_INSTALL_VERSION=9-0-1
-  - if: branch = master
-    os: linux
-    env: PYTHON=3.7 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=bb7ca4f0da ENERGYPLUS_INSTALL_VERSION=9-0-1
-  - if: branch = master
-    os: linux
-    env: PYTHON=2.7 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=bb7ca4f0da ENERGYPLUS_INSTALL_VERSION=9-0-1 NUMPY=True
-  - if: branch = master
-    os: linux
-    env: PYTHON=3.7 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=bb7ca4f0da ENERGYPLUS_INSTALL_VERSION=9-0-1 NUMPY=True
-  # OSX, only on master
-  - if: branch = master
+    env: PYTHON=3.6 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=40101eaafd
+    ENERGYPLUS_INSTALL_VERSION=8-9-0
+  # OSX, on develop
+  - if: branch = develop
     os: osx
-    env: PYTHON=2.7 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=bb7ca4f0da ENERGYPLUS_INSTALL_VERSION=9-0-1
-  - if: branch = master
-    os: osx
-    env: PYTHON=3.7 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=bb7ca4f0da ENERGYPLUS_INSTALL_VERSION=9-0-1
-  - if: branch = master
-    os: osx
-    env: PYTHON=2.7 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=bb7ca4f0da ENERGYPLUS_INSTALL_VERSION=9-0-1 NUMPY=True
-  - if: branch = master
-    os: osx
-    env: PYTHON=3.7 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=bb7ca4f0da ENERGYPLUS_INSTALL_VERSION=9-0-1 NUMPY=True
+    env: PYTHON=3.6 ARCHETYPAL_INTEGRATION=True ENERGYPLUS_VERSION=8.9.0 ENERGYPLUS_SHA=40101eaafd
+    ENERGYPLUS_INSTALL_VERSION=8-9-0 NUMPY=True
 
 before_install:
   # install EnergyPlus
