--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
+utm
 osmnx>=0.9
 lxml
 shapely
-geopandas
+geopandas>=0.3
 geomeppy
-matplotlib
+matplotlib>=2.1
 eppy
-requests
+requests>=2.18
 pycountry
 scikit-learn
-pandas
+pandas>=0.21
 pyomo
-numpy
+numpy>=1.13
 tqdm
