--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,10 @@ before_install:
   - conda config --set always_yes yes --set show_channel_urls true
   - conda update -n base conda
   - conda config --prepend channels conda-forge
-  - conda env create python=$TRAVIS_PYTHON_VERSION -f environment.yml
-  - conda install --yes --file requirements-dev.txt
-  - source activate TEST
+  - conda create -n archetypal python=$TRAVIS_PYTHON_VERSION
+  - conda env update -n archetypal -f environment.yml --prune
+  - conda install --file requirements-dev.txt
+  - source activate archetypal
   - conda info --all
 
 install:
@@ -57,6 +58,7 @@ install:
   - conda list
 
 script:
+  - cd tests
   - coverage run --source archetypal -m pytest --verbose
 
 after_success:
