Updated docker file to working set

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,11 +12,11 @@
 # >>> docker push samuelduchesne/archetypal
 #
 # Run bash in this container and export final conda environment to a yml file:
-# >>> docker run --rm -it -u 0 --name archetypal -v %cd%:/home/jovyan/work samuelduchesne/archetypal /bin/bash
-# >>> conda env export -n base > /home/jovyan/work/environment.yml
+# >>> docker run --rm -it -u 0 --name archetypal -v $(pwd):/home/samueld/work samuelduchesne/archetypal /bin/bash
+# >>> conda env export -n base > /home/samueld/work/environment.yml
 #
 # Run jupyter lab in this container:
-# >>> docker run --rm -it --name archetypal -p 8888:8888 -v %cd%:/home/jovyan/work samuelduchesne/archetypal
+# >>> docker run --rm -it -p 8888:8888 -v $(pwd):/home/samueld/work samuelduchesne/archetypal
 #
 # Stop/delete all local docker containers/images:
 # >>> docker stop $(docker ps -aq)
@@ -24,26 +24,32 @@
 # >>> docker rmi $(docker images -q)
 ########################################################################
 
-FROM jupyter/base-notebook
+FROM continuumio/miniconda3
 LABEL maintainer="Samuel Letellier-Duchesne <samuel.letellier-duchesne@polymtl.ca>"
+LABEL url="https://github.com/samuelduchesne/archetypal"
+LABEL description="archetypal: Retrieve, construct, simulate, and analyse building archetypes"
 
-# symlink and permissions
-USER root
-RUN ln -s /opt/conda/bin/jupyter /usr/local/bin
-USER $NB_UID
+RUN git clone --depth=50 --branch=develop https://github.com/samuelduchesne/archetypal.git
+WORKDIR archetypal
 
 # configure conda and install packages in one RUN to keep image tidy
-RUN conda config --set show_channel_urls true && \
+RUN conda update -n base conda && \
     conda config --prepend channels conda-forge && \
-    conda update --override-channels -c conda-forge --yes -n base conda && \
-    conda update --override-channels -c conda-forge --yes --all && \
-    conda install --override-channels -c conda-forge --yes archetypal python-igraph && \
+    conda env update -n archetypal -f environment.yml --prune && \
+    conda install -n archetypal --file requirements-dev.txt && \
+    conda install --strict-channel-priority --update-all --force-reinstall --yes jupyterlab python-igraph && \
     conda clean --yes --all && \
     conda info --all && \
-    conda list
+    conda list && \
+    echo "source activate archetypal" > ~/.bashrc && \
+    python setup.py install
+ENV PATH /opt/conda/envs/archetypal/bin:$PATH
 
 # launch notebook in the local working directory that we mount
 WORKDIR /home/samueld/wip
 
 # set default command to launch when container is run
-CMD ["jupyter", "lab", "--no-browser", "--NotebookApp.token=''", "--NotebookApp.password=''"]
+CMD ["jupyter", "lab", "--ip='0.0.0.0'", "--port=8888", "--no-browser", "--allow-root", "--NotebookApp.token=''", "--NotebookApp.password=''"]
+
+# to test, import archetypal and print its version
+RUN ipython -c "import archetypal; print(archetypal.__version__)"
