New: Run trnsysidf.exe with wine

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -25,13 +25,32 @@
 # >>> docker rmi $(docker images -q)
 ########################################################################
 
-FROM continuumio/miniconda3
+FROM scottyhardy/docker-wine:latest
+
 LABEL maintainer="Samuel Letellier-Duchesne <samuel.letellier-duchesne@polymtl.ca>"
 LABEL url="https://github.com/samuelduchesne/archetypal"
 LABEL description="archetypal: Retrieve, construct, simulate, and analyse building archetypes"
 
-# Clone repo
-RUN git clone --branch=develop https://github.com/samuelduchesne/archetypal.git
+# Get git related dependecies
+ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
+ENV PATH /opt/conda/bin:$PATH
+
+RUN apt-get update --fix-missing && \
+    apt-get install -y wget bzip2 ca-certificates curl git && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-4.5.11-Linux-x86_64.sh -O ~/miniconda.sh && \
+    /bin/bash ~/miniconda.sh -b -p /opt/conda && \
+    rm ~/miniconda.sh && \
+    /opt/conda/bin/conda clean -tipsy && \
+    ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d/conda.sh && \
+    echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc && \
+    echo "conda activate base" >> ~/.bashrc
+
+ENV TINI_VERSION v0.16.1
+ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /usr/bin/tini
+RUN chmod +x /usr/bin/tini
 
 # Before install
 ENV ENERGYPLUS_VERSION=8.9.0
@@ -48,8 +67,9 @@ RUN curl -SLO $ENERGYPLUS_DOWNLOAD_URL && \
     rm $ENERGYPLUS_DOWNLOAD_FILENAME.$EXT
 
 # configure conda and install packages in one RUN to keep image tidy
-WORKDIR archetypal
-RUN conda update -n base conda && \
+RUN git clone --branch=develop --verbose https://github.com/samuelduchesne/archetypal.git && \
+    cd archetypal && \
+    conda update -n base conda && \
     conda config --append channels conda-forge && \
     conda env update -n archetypal -f environment.yml --prune && \
     conda install -n archetypal --file requirements-dev.txt && \
@@ -63,7 +83,7 @@ ENV PATH /opt/conda/envs/archetypal/bin:$PATH
 
 # launch notebook in the local working directory that we mount
 WORKDIR /home/archetypal/wip
-
+ENTRYPOINT ["/usr/bin/entrypoint"]
 # set default command to launch when container is run
 CMD ["jupyter", "lab", "--ip='0.0.0.0'", "--port=8888", "--no-browser", "--allow-root", "--NotebookApp.token=''", "--NotebookApp.password=''"]
 
