--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ before_install:
   - ENERGYPLUS_DOWNLOAD_BASE_URL=https://github.com/NREL/EnergyPlus/releases/download/v$ENERGYPLUS_VERSION
   - ENERGYPLUS_DOWNLOAD_FILENAME=EnergyPlus-$ENERGYPLUS_VERSION-$ENERGYPLUS_SHA-$PLATFORM-x86_64
   - ENERGYPLUS_DOWNLOAD_URL=$ENERGYPLUS_DOWNLOAD_BASE_URL/$ENERGYPLUS_DOWNLOAD_FILENAME.$EXT
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then EXTRAS_DOWNLOAD_URL=http://energyplus.helpserve
-  - .com/Knowledgebase/Article/GetAttachment/97/8230;
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then EXTRAS_DOWNLOAD_URL=http://energyplus.helpserve.com/Knowledgebase/Article/GetAttachment/97/8230; fi
   - curl -SLO $ENERGYPLUS_DOWNLOAD_URL
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     curl -SLO $EXTRAS_DOWNLOAD_URL; fi
