--- a/.travis.yml
+++ b/.travis.yml
@@ -44,14 +44,7 @@ before_install:
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
-  - conda config --set always_yes yes --set show_channel_urls true
-  - conda update -n base conda
-  - conda config --prepend channels conda-forge
-  - conda create -n archetypal python=$TRAVIS_PYTHON_VERSION
-  - conda env update -n archetypal -f environment.yml --prune
-  - conda install -n archetypal --file requirements-dev.txt
-  - source activate archetypal
-  - conda info --all
+  - pip install .[dev]
 
 install:
   - python setup.py install
