--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 # package_data is a low-down, dirty lie. It is only used when building binary packages (python setup.py bdist ...) but
 # not when building source packages (python setup.py sdist ...)
 
-include archetypal/templates/*
+include archetypal/ressources/*
 include requirements.txt
 include requirements-dev.txt
